--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="app.css">
     </head>
     <body>
-        <h1>Hewwo!</h1>
+        <h1>Hewwo, Wowwd!</h1>
 
         <p>This is a little HTML/CSS project we can doodle on together.</p>
         <script src="app.js"></script>
