--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>Hewwo!</h1>
 
         <p>This is a little HTML/CSS project we can doodle on together.</p>
+	<img src="https://i.ytimg.com/vi/k_VVB9DLMl8/maxresdefault.jpg" />
         <script src="app.js"></script>
     </body>
 </html>
